<resources>
    <string name="app_name">AvitoTraineeApplication</string>
    <string name="title_activity_maps">Map</string>
    <string name="mnu_filter_services">Filter Services</string>
  <string name="mnu_normal">Normal</string>
  <string name="mnu_satellite">Satellite</string>
  <string name="mnu_terrain">Terrain</string>
  <string name="mnu_hybrid">Hybrid</string>
</resources>